--- a/main-partition/src/main/resources/application.properties
+++ b/main-partition/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 # Configuration file
 # key = value
+quarkus.datasource.url=jdbc:h2:mem:test
+quarkus.datasource.driver=org.h2.Driver
+quarkus.datasource.username=root
+quarkus.datasource.password=
+quarkus.datasource.max-size=8
+quarkus.datasource.min-size=2
+quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.sql-load-script=import.sql
