--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
             </systemProperties>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>io.quarkus</groupId>
+          <artifactId>quarkus-maven-plugin</artifactId>
+          <version>${quarkus-plugin.version}</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
