No special dependencies in app and domain

--- a/main-partition/pom.xml
+++ b/main-partition/pom.xml
@@ -38,7 +38,7 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-jdbc-h2</artifactId>
+      <artifactId>quarkus-jdbc-mysql</artifactId>
     </dependency>
 
     <dependency>
