--- a/app-impl/pom.xml
+++ b/app-impl/pom.xml
@@ -18,5 +18,13 @@
       <groupId>org.acme</groupId>
       <artifactId>domain</artifactId>
     </dependency>
+    <dependency>
+      <groupId>jakarta.enterprise</groupId>
+      <artifactId>jakarta.enterprise.cdi-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.transaction</groupId>
+      <artifactId>jakarta.transaction-api</artifactId>
+    </dependency>
   </dependencies>
 </project>
