Updated to latest Quarkus version

--- a/infra-web/pom.xml
+++ b/infra-web/pom.xml
@@ -19,5 +19,9 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy-jackson</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-graphql</artifactId>
+    </dependency>
   </dependencies>
 </project>
