--- a/main-partition/src/main/resources/application.properties
+++ b/main-partition/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 # Configuration file
 # key = value
-quarkus.datasource.url=jdbc:mysql://localhost/test
-quarkus.datasource.driver=com.mysql.cj.jdbc.Driver
-quarkus.hibernate-orm.dialect=org.hibernate.dialect.MySQL8Dialect
+quarkus.datasource.db-kind=mariadb
 quarkus.datasource.username=root
 quarkus.datasource.password=root
-quarkus.datasource.max-size=8
-quarkus.datasource.min-size=2
-quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.sql-load-script=import.sql
+
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost/quarkus
+quarkus.datasource.jdbc.max-size=16
+
+quarkus.flyway.migrate-at-start=true
+
+quarkus.native.native-image-xmx=8G
