--- a/infra-persistence/pom.xml
+++ b/infra-persistence/pom.xml
@@ -7,17 +7,31 @@
     <artifactId>clean-arch-quarkus</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
-
   <artifactId>infra-persistence</artifactId>
-
   <dependencies>
     <dependency>
       <groupId>org.acme</groupId>
       <artifactId>domain</artifactId>
     </dependency>
     <dependency>
+      <groupId>jakarta.enterprise</groupId>
+      <artifactId>jakarta.enterprise.cdi-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-hibernate-orm-panache</artifactId>
+      <artifactId>quarkus-agroal</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jdbc-mariadb</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-flyway</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jdbi</groupId>
+      <artifactId>jdbi3-core</artifactId>
     </dependency>
   </dependencies>
 </project>
