Update to latest Quarkus

--- a/main-partition/src/main/resources/application.properties
+++ b/main-partition/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 # Configuration file
 # key = value
-quarkus.datasource.db-kind=mariadb
+quarkus.datasource.db-kind=h2
 quarkus.datasource.username=root
 quarkus.datasource.password=root
 
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost/quarkus
+quarkus.datasource.jdbc.url=jdbc:h2:mem:quarkus
 quarkus.datasource.jdbc.max-size=16
+
+quarkus.hibernate-orm.database.generation=validate
 
 quarkus.flyway.migrate-at-start=true
 
