--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 buildscript {
+    ext.kotlin_version = '1.8.22'
     repositories {
         mavenLocal()
         mavenCentral()
@@ -7,12 +8,16 @@ buildscript {
         }
     }
     dependencies {
-        classpath "io.quarkus:gradle-application-plugin:2.4.0.Final"
+        classpath "io.quarkus:gradle-application-plugin:3.1.1.Final"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
     }
 }
 
 subprojects {
     apply plugin: "java"
+    apply plugin: 'kotlin'
+    apply plugin: 'kotlin-allopen'
     apply plugin: "idea"
 
     sourceCompatibility = 11
@@ -23,10 +28,21 @@ subprojects {
         mavenCentral()
     }
 
-
     dependencies {
         implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
         implementation "jakarta.enterprise:jakarta.enterprise.cdi-api"
+        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    }
+
+    allOpen {
+        annotation("jakarta.ws.rs.Path")
+        annotation("jakarta.enterprise.context.ApplicationScoped")
+        annotation("io.quarkus.test.junit.QuarkusTest")
+    }
+
+    kotlin {
+        jvmToolchain(11)
     }
 }
 
@@ -50,16 +66,16 @@ project(":infrastructure:web") {
         implementation project(":application:api")
         implementation "io.quarkus:quarkus-resteasy-jackson"
         implementation "io.quarkus:quarkus-smallrye-graphql"
+        implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
     }
 }
 
 project(":infrastructure:persistence") {
     dependencies {
         implementation project(":application:domain")
-        implementation "io.quarkus:quarkus-agroal"
-        implementation "io.quarkus:quarkus-jdbc-mariadb"
+        implementation "io.quarkus:quarkus-hibernate-orm"
+        implementation "io.quarkus:quarkus-jdbc-h2"
         implementation "io.quarkus:quarkus-flyway"
-        implementation "org.jdbi:jdbi3-core:3.23.0"
     }
 }
 
@@ -73,6 +89,7 @@ project(":main-partition") {
         implementation project(":infrastructure:persistence")
         implementation project(":infrastructure:web")
         implementation "io.quarkus:quarkus-resteasy"
+        implementation "io.quarkus:quarkus-kotlin"
         implementation 'io.quarkus:quarkus-container-image-docker'
     }
 }
